Closed Bug 312959 Opened 20 years ago Closed 20 years ago

Hovering over newly-added BM Bar bookmark causes Camino to hang.

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.0

People

(Reporter: alqahira, Assigned: sfraser_bugs)

References

()

Details

(Keywords: fixed1.8, hang)

Attachments

(2 files, 1 obsolete file)

Camino 2005101814 (v1.0a1+) STR: 1. Visit site above 2. Drag blue globe from tab to BM Bar to create new bookmark 3. After bookmark is created, hover over bookmark Results: A few seconds of nothing and then beachball and shortly Activity Monitor reports Camino is hung Expected: Tooltip with full bookmark name and URL Sample to follow.
Not sure if today's branch build being so late means anything, but I experienced this on yesterday's branch build, too.
Summary: Hovering over newly-added BM Bar bookmark casues Camino to hang. → Hovering over newly-added BM Bar bookmark causes Camino to hang.
Definitely needs to block. This should block beta.
Flags: camino1.0? → camino1.0+
Target Milestone: --- → Camino1.0
It's hanging in -[NSToolTipManager displayToolTip:]. Ugh.
Assignee: mikepinkerton → sfraser_bugs
Turns out that using "\n\n" as a tooltip string hangs Cocoa.
Status: NEW → ASSIGNED
Attached patch Patch (obsolete) — Splinter Review
Patch first avoids the problem by inserting the bookmark after settings its properties, and secondly checks the tooltip string to make sure it's not "\n\n".
+ [theBookmark release]; + [self insertChild:theBookmark atIndex:aPosition isMove:NO]; These two lines should be swapped in the patch.
Comment on attachment 200051 [details] [diff] [review] Patch + if (![tooltipString isEqualToString:@"\n\n"]) + [self setToolTip:]; Set it to what?
Attached patch Patch v. 2Splinter Review
Attachment #200051 - Attachment is obsolete: true
Attachment #200094 - Flags: review?(mark)
Comment on attachment 200094 [details] [diff] [review] Patch v. 2 Nice.
Attachment #200094 - Flags: review?(mark) → review+
Actually, if @"\n\n" is bad, then any other number of @"\n" might also be a problem. This could bite us again if the tooltip format ever changes.
Fixed on trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED

Long-term Conditions essay services has become very popular among nursing research paper service seekers in need of Long-term Conditions Writing Services and Long-term Conditions assignment writing services.
https://www.meldaresearch.com/long-term-conditions-writing-services/

Do you require Medicine Writing Services and Medicine Research Paper Services? Seek our Online Medicine Essay Writing Services today.
https://www.meldaresearch.com/medicine-essay-writing-2/

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: