Fix bug 312959: avoid hang showing tooltip on a newly added bookmark toolbar item by ensuring that the bookmark has its title and url before notifications are fired for it, and avoiding "\n\n" tooltip strings. r=mento.